# hungry-family

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.sqlx/: query-4039b42cae48aeba02e92dd6fe42286f6eb8903ded0f64d988a4c5522c4f5864.json  query-40c2c6b1216aed99c0f555b2fa1512bd3b152a5b360c9ae95f78e4a587660357.json  query-edc78649bc3bcd920468a72e5817eb4418eb68c8a5a47d6d6a51b63a94c1ca64.json
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  AuthContext.jsx  LoginPage.css  LoginPage.jsx  Loginpage.jsx  ProtectedRoute.jsx  Protectedroute.jsx  index.css
migrations/: 0001_init.sql  0002_store_layouts.sql  0003_shopping_lists_v2.sql
src/: auth.rs  main.rs  routes.rs  test_pass_hasher.rs
src/routes/: auth.rs  mod.rs  planner_products.rs  planner_stores.rs  shopping_lists.rs
static/: index.html
static/assets/: index-0HhPmpkh.js  index-BLZPhcPh.js  index-BnitVbPs.js  index-CjQhZCoY.js  index-CpxPGbDl.css  index-CqReazb2.css  index-Csdk4kci.js  index-D3rmW9MG.js  index-DQpJnUC0.css  index-Dfs-4BAa.js  index-ckHC0bQV.js  index-m6mA0k1N.js  index-mlKBp9tW.css  index-sw8eBesa.js  index-yB3DmM-c.js
