[package]
name = "hungry-family"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
features = "0.10.0"
sqlx = "0.8.6"
tokio = { version = "1.5.0", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "time",
    "io-util",
    "sync",
    "fs",
] }
tower-http = { version = "0.6.8", features = ["fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
