[package]
name = "hungry-family"
version = "0.1.0"
edition = "2024"
default-run = "hungry-family"

[dependencies]
argon2 = "0.5"
axum = "0.8.8"
axum-extra = { version = "0.12.6", features = ["cookie"] }
dotenvy = "0.15.7"
features = "0.10.0"
hex = "0.4.3"
rand = { version = "0.10.1", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "time"] }
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1.52.1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "time",
    "io-util",
    "sync",
    "fs",
] }
tower-http = { version = "0.6.8", features = ["fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
